--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <p class="review-text">
             " We needed the same printed design as the one we had ordered a week
             prior. Not only did they find the original order, but we also
-            received it in time. Excellent! "
+            received it in time. Excellent!&nbsp;"
           </p>
         </div>
         <div class="review">
@@ -183,7 +183,7 @@
           <p class="review-text">
             " Customer service is always excellent and very quick turn around.
             Completely delighted with the simplicity of the purchase and the
-            speed of delivery. "
+            speed of delivery.&nbsp;"
           </p>
         </div>
         <div class="review">
@@ -197,7 +197,7 @@
           <p class="review-text">
             " Put an order with this company and can only praise them for the
             very high standard. Will definitely use them again and recommend
-            them to everyone! "
+            them to everyone!&nbsp;"
           </p>
         </div>
       </section>
